--- a/ocp-templates/pipeline.yaml
+++ b/ocp-templates/pipeline.yaml
@@ -38,7 +38,7 @@ spec:
            sh "cp target/openshift-tasks.war oc-build/deployments/ROOT.war"
            // clean up. keep the image stream
            sh "oc project test"
-           sh "oc delete bc,dc,svc,route -l app=tasks -n test"
+           sh "oc delete bc,dc,svc,route -l app=kitchensink -n test"
            // create build. override the exit code since it complains about exising imagestream
            sh "oc new-build --name=kitchensink --image-stream=jboss-eap70-openshift --binary=true --labels=app=kitchensink -n test || true"
            // build image
